--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -1,5 +1,7 @@
 
 
+24ad856e-4834-48ac-81e3-29275bc9bcb4 - сессия с наложением и объедегением заметок 
+
 - ⚠️ сделать сейчас: базовый user case c записью заметок, наложением, редактирования заголовка \ тегов и сохранения в обсидиан
     - редактирование текста заметка в раскрывающейся модалке как в n8n
     - наложение заметок друг на друга = объеденение. но не в группу а по сути просто одна новая заметка становится.
