--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -1,15 +1,16 @@
 
 
 24ad856e-4834-48ac-81e3-29275bc9bcb4 - сессия с наложением и объедегением заметок 
-
-- ⚠️ сделать сейчас: базовый user case c записью заметок, наложением, редактирования заголовка \ тегов и сохранения в обсидиан
-    - редактирование текста заметка в раскрывающейся модалке как в n8n
-    - наложение заметок друг на друга = объеденение. но не в группу а по сути просто одна новая заметка становится.
-    при объеденение заметок между ними будет черта "///////"
-
-    - дальше переводим теукщий блок. но надо с моками пока чисто front с tldraw. потом бд составтиь. бляя
-
+6130c393-aa5a-4007-80de-78b1f92e0bfd - самая первая сессия где делали план 
  Y.js критически важна для синхронизации без конфликтов между Telegram ⚠️
+
+
+как будет реализована фича AI подсказок? по сути просто будет запрос на nest - обнолвение поля с вариантами заголовков из AI. но надо при подстановка из ai так же сохранять в варианты или истрию вариантов текущий ручной заголовко. и в истории вариантом будут крестики чтоб убрать не нунжное. и надо при клике или hover показыать полный заголовко этих вариантов. но тут не модалка а просто текст.
+    сделать обводку типа последний сгенерированный вариант. 
+    я буду переходить в вкладку истории после нажатие на "сгенерировать заголок" и в этой вкладке и будет отображаться "последний сгенерированный вариант"
+    
+
+
 
 - 🧠 надо понять обозначения заметок 
     - обводка
