--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -5,6 +5,9 @@
  Y.js критически важна для синхронизации без конфликтов между Telegram ⚠️
 
 
+
+осталось теги добавить. там по сути сложная система с AI подсказками а потом уже
+
 как будет реализована фича AI подсказок? по сути просто будет запрос на nest - обнолвение поля с вариантами заголовков из AI. но надо при подстановка из ai так же сохранять в варианты или истрию вариантов текущий ручной заголовко. и в истории вариантом будут крестики чтоб убрать не нунжное. и надо при клике или hover показыать полный заголовко этих вариантов. но тут не модалка а просто текст.
     - сделать обводку типа последний сгенерированный вариант. 
     - я буду переходить в вкладку истории после нажатие на "сгенерировать заголок" и в этой вкладке - и будет отображаться "последний сгенерированный вариант"
