--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -7,11 +7,11 @@
 
 
 осталось теги добавить. там по сути сложная система с AI подсказками а потом уже
+    - интеграция с получени тегов с обсидиан
+    - промпт на получение тегов старых\новых - один. просто одна кнопка AI которая каждый раз генериуется несколько старых\новых тегов. сохранять их никуда не надо. толькн на фронте. исотрии тоже нет.
+    - при вводе через сообщение - "сгенрируй теги отражающий такую ту мыссль" - подставть это в промпт который сгенериурет разные варианты тегов и так далее. 
+        после первого запроса будут разные вариныт тегов - и вот тут я могу их редактировать так как будет доступна сессия. то есть история..
 
-как будет реализована фича AI подсказок? по сути просто будет запрос на nest - обнолвение поля с вариантами заголовков из AI. но надо при подстановка из ai так же сохранять в варианты или истрию вариантов текущий ручной заголовко. и в истории вариантом будут крестики чтоб убрать не нунжное. и надо при клике или hover показыать полный заголовко этих вариантов. но тут не модалка а просто текст.
-    - сделать обводку типа последний сгенерированный вариант. 
-    - я буду переходить в вкладку истории после нажатие на "сгенерировать заголок" и в этой вкладке - и будет отображаться "последний сгенерированный вариант"
-    - так если этот слишком длинный то при наведение будет отображаться полный заголовок как текстовая плашка под блоком с позиции абсолют и никак не влиять на другие жлементы. отображться должен только если длина заголовком превышает длину блока то есть есть троеточие в конце
 
 
 
