--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -12,7 +12,8 @@
     - при вводе через сообщение - "сгенрируй теги отражающий такую ту мыссль" - подставть это в промпт который сгенериурет разные варианты тегов и так далее. 
         после первого запроса будут разные вариныт тегов - и вот тут я могу их редактировать так как будет доступна сессия. то есть история..
 
-
+    - кнопка очистить историю нужна 
+    - просмотрет историю запросов в текущей истории
 
 
 - 🧠 надо понять обозначения заметок 
