--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -5,6 +5,8 @@
  Y.js критически важна для синхронизации без конфликтов между Telegram ⚠️
 
 
+24c2f1c8-fabb-4726-a11e-bfcefab7fe31 - СЕССИЯ ПО ТЕГАМ
+
 
 осталось теги добавить. там по сути сложная система с AI подсказками а потом уже
     - интеграция с получени тегов с обсидиан
