--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -1,42 +1,112 @@
-
-
 24ad856e-4834-48ac-81e3-29275bc9bcb4 - сессия с наложением и объедегением заметок 
 6130c393-aa5a-4007-80de-78b1f92e0bfd - самая первая сессия где делали план 
  Y.js критически важна для синхронизации без конфликтов между Telegram ⚠️
-
-
 24c2f1c8-fabb-4726-a11e-bfcefab7fe31 - СЕССИЯ ПО ТЕГАМ
 
 
-осталось теги добавить. там по сути сложная система с AI подсказками а потом уже
-    - интеграция с получени тегов с обсидиан
-    - промпт на получение тегов старых\новых - один. просто одна кнопка AI которая каждый раз генериуется несколько старых\новых тегов. сохранять их никуда не надо. толькн на фронте. исотрии тоже нет.
-    - при вводе через сообщение - "сгенрируй теги отражающий такую ту мыссль" - подставть это в промпт который сгенериурет разные варианты тегов и так далее. 
-        после первого запроса будут разные вариныт тегов - и вот тут я могу их редактировать так как будет доступна сессия. то есть история..
 
-    - кнопка очистить историю нужна 
-    - просмотрет историю запросов в текущей истории
+пока что делаем базу чтоб удобно было все грузить в обсидиан и распределять там. то есть это объеденение заметок, особенно медиа файла и грамотный заголовк с тегами
+а вот "тегирование заметок" - уже финальная задача на эти пару недель. там мы опишем процесс работы в нашем приложение с заметками до конца. это и подгрузка с обсидиан.
+    при составление плана "тегирование заметок" мы двигаеимся от того как мы будем работать через canvas. для отправки в obsidian и работы с нейронками тегов более чем достаточно. 
+    🟢 как вариант самый базовй - справа от заметки будет кнопка "найти похожие заметки для связи" - нейронка будет искать похожие заметки и выводить их в ряд. будет пояснение "почему эти заметки похожи" + фукцнионал добавления связей в редактор - "добавить ссылку на эту заметку в конец" или "вставьте ссылку на абзца..."
 
 
-- 🧠 надо понять обозначения заметок 
-    - обводка
-    -полоса сбоку
-    - стикер слева ссверхку 
-    -текст слева снизу. то "время" то "текст"
+
+
+
+
+- 🧠 ВАЖНЫЕ ЗАДАЧИ:
+    - архитектура UI фич. анимациции\модалки\use toast
+        стоит ли тут использовать tailwind? что использовать для анимаций?
+        нужно составить "максимально сложные возможные анимации"
+    - расписать user case просмотра заметок при hover эффекте
+        раскрытие текста при hover, заголовка, оснвонвным тем
+        тут главная мысль - hover работает очень быстро и дает все представление о заметке а не просто текст
+        обводка \ полоса сбоку \ стикеры и т.д.
+
+
+- 🧠 тегирование заметок ⚠️
+    текст ниже не инстркуция не четкий план это просто набор мыслей и брейншторма - это мой монолог с самим сабой где я пытаюсь решить проблему описания заметки. чтоб это был не просто текст и заголовок - а чтоб можно было быстро понять ЧТО ЭТО ДАЕТ МНЕ без чтения текста и заголовка.
+
+    - место. откуда записал?
+    - состояние. режим ебашить\тильт\агрессия\философ
+    - инстай\отчет\дейлик\дрочь мысли
+    - источник. тик-ток\ютуб. их может быть несколько
+    - важность на для жизни. влияние на жизнь. блять.
+    Ситуации: рандомные уличные взаимодействия, комментарии/посты, воображаемые сценарии
+    Мысли в моменте: спонтанные размышления на улице, настройка на действие
+    Рефлексия: анализ решения страхов, уверенный разбор опыта
+    Фундаментальные правила: базовые принципы жизни
+    Источники: YouTube интервью, Obsidian заметки, Claude чаты
+
+    есть заметки например где я нашел какое то решение. вот тут кстати главный вопрос - а зачем мне система тегов вообще нужна? как я буду обращаться к заметкам?
+    - допустим сейчас я это вижу так - на меня накатила грустинка что я загоняюсь по поводу того что будет конфликт. а на это отвечал уже - то есть как "решенный кейс" или успешный кейс и нужно чтоб я нейонке желательно скормил это все и она выдала ответ. ну или сам нашел.
+    - или не хочу идти в клуб но понимаю что нужна социализация - кидаю нейронке и вижу ответ с цитатами про то как я себя хорошо чувствовал на сходке с программистами на завтра и вспоминаю то состояние
+    - тоже какие то смысловые заметки о мировозрение и так далее. потом что генерил много умных мылсей но все их деражть не могу. надо чтоб я задавал вопрос - а нейронка вела меня по моим старым заметкам за которкий период активируя в памяти все что я надумал. так как именно искать это все мозг тратить очень много ресурсов на поиск нужных воспоминаний.
+
+    ну это я рассказать про сценарии исолпьзования в будущем через нейронку. сейчас же я так же ищу решения каким образом заметки на хоолсте будут отображаться
+    Что это дает мне? зачем мне это? - вот вся суть. смотря на холст я должен понимать в чем вообще его смысл? зачем он мне нужен? я просто делаю очередные заметки ради заметок? для чего? пару кейсов я расписал выше. но в моменте смотря на холст, я могу допустим по каким то знакам увидеть правила. типа определнынй цвет или стикер - значит важная идея. потом я кликну на какую ту идею - с ней будут связанные заметки. у нас же не только "готовые мысли" но и так же монолог как и тут. я могу перейти к старому монологу и чтото понять из него. 
+
+    но как еще я смогу перейти к старому монологу? я долго изучал систему zettelkasten и она имеет ряд недостатков. мне например notion удобнее банально за счет "ширины обзора" - так как я не могу каждый раз кликать по ссылке в заметке - зачем? если я могу через вложенные списке на одном экране отобразить сразу сотни заметок. у меня обычно toggle list с заголовкаом который внутри себя содрежит еще toggle list. такой подход имеет так же сущесвтенный недостаток, т.к. допустим нижняя тема в 4 дочерним toggle list имеет схожую мысль с темой которая вообще в другой области и не понятно как их объеденить.
+
+    NOTES_CATEGORIZATION_IDEAS.md - нейронке кинул все заметки obsidian + инфу выше 
+
+    NETWORKING_NOTE_ANALYSIS - разбор конкретного примера 
+
+    🟢 Вот тоже интересная мысль, которая нарезонирует про то, что ты написал выше, что ключевое для понимания — это игровая метафора, эффективная игра. Вот такие метафоры — это тоже очень важная часть, поскольку как раз-таки отвечая на вопрос, что это даёт мне, в чём смысл всей этой заметки. И вот как раз-таки смысл всей этой заметки — это социальная игра, эффективная. А всё, что было до этого, там, кстати, по большей степени — это поток мыслей. Нужно отделять… Вот один из хороших примеров, то, что мы отделяем итог, что мы получили социальные правила, эффективные игры и начальный процесс, как мы к этому шли. Если я захочу, я могу, допустим, по отдельной кнопке посмотреть, как я пришёл к этой мысли, но это уже дополнительная информация. 
+
+
+
+    ## RESONATING_IDEAS.md
+
+
+
+    🟢 перечисляю свои мысли а ты должен из этих мыслей дать мне то что будет резонировать потому что финальный план мы пока что с тобой сделать не можем будет работать вот может вообще отказаться от идеи отображения заметок на холсте хотя блять нет подожди надо же все равно нужно как-то блять в чем у нас финальная цель подожди финальная цель в том чтобы заметка попала в обсидиан а что потом а потом чтобы я на основе этих заметок искал решение как я буду искать решение скорее всего через нейронку так может нам тогда вообще если я буду искать решение через нейронку вообще типа ну не указывать никакие теги а просто все кидать сплошным текстом нет это будет проблематично поскольку по-хорошему в будущем я хотел бы читать текст написанный мною но читать все заметки вручную я тоже не хочу а зачем мне читать заметки вручную вопрос вот для чего типа я открою обсидиан допустим открою какой-то граф и на графе я буду смотреть допустим по автономности действия искать примеры мне оно надо скорее всего мне нахуй не надо ну я допустим могу захотеть найти примеры различных действий которые я делал допустим по социальной инженерии я захочу найти заметку про разведчика из которых будет какая-то интересная мысль но я сомневаюсь что я буду все это читать вручную опять таки то есть скорее всего базовый текст будет обрабатываться через нейронку то есть в конце концов но я все равно хочу чтобы заметки отображались вот я в будущем скорее всего буду добавлять функциональность чтобы у нас заметка отображалась на канвас в сгенерированном через нейронку видео у каждой заметки будет ссылка на текстовую заметку но сама по себе она будет переделана через нейронку с теми вариантами что я тебе сейчас сказал которая будет иметь историю создания заметки как мы перешли к этой мысли будет иметь итог что это дает мне и итог будет максимально подробный и максимально развернутый потому что повторюсь заметку я буду читать то есть это не просто должен быть набор метафора и слов но при этом если я захочу я могу посмотреть как я к этой мысли пришел я могу посмотреть какие итоги и в конце могу перейти в текущую заметку в обсидиан а вот допустим на канвасе в этой же заметке у меня еще будет сбоку от образа отображаться связанные заметки вот пока что в памяти я себе представляю это так в своей голове
+
+
+    https://claude.ai/chat/f5df8e2b-cf10-4ea5-8b44-1da9c0daff7f - эталонный пример применеения нейронки + контекст obsidian
+
 
 
 - 🧠 ближайшие планы
     - убрать описание
-    - при наведение раскрывается на длину и ширину чтоб умещался заголовок
     - при наведение появляется сбоку или вверхку кнопка из которой по клику в бок\вверх открывается текст заметкий который можно пролитсать
         этот блок с текстом можно будет раскрыть в модалку больше
         в модалке редактирования так же сделать. как в n8n. что можн ооткрыть на всю ширину блок редактрования текст
 
- 
+    - надо чтоб заголовки по укажанному промпту корректно генерились от чатГПТ. типа "в заголвоке должно быть первые 3 слова - краткое описание чпро что еткст типа, уважени\стра\любовь\изхучени и потм еще 3 слова где будет емкая фраза типа - умная мысль" - секйчас он на такое не регауирет
+
+    \\\\
+
+    как отображать заметку на хосле? сейчас она слишкмо большая
+    - не отображать стикер. 
+    - время перенести
+    - описание не отображать
+    - сейчас заголовки с троеточием что правильно но надо чтоб при навеедние на заголок tooltip  с полным заголовком
+    - запомнитьа поцзию в локалсторадже для перезагрузки
+    - по клику вне тегов доаупстим - меню с тегам зкрыватиется так же историей лошика такая же как в  onblur
+
+
     - вклдка вверху с оснонвми промптами для obsidan типа "проанализируй заметки все" "у меня сейчас ситуация постоянно думаю что конфликт" или просто "расскажи про мою автономность с примерами"
 
 
+
+
 \\\\
+
+
+- 🧠 дальнейшние планы
+    - построение связей по Zettelcastel. 
+    но вопрос как. для отображения заметок из обсидиан по всути другой фкуцуионал будет.
+    А, так мы можем в заметке, вот как сейчас в системе тегов, также добавить связь при помощи АИшки И допустим с помощью АИ можно сделать так, чтобы он писал проанализировать, куда можно добавить эту заметку, связь И он анализировал все заметки Obsidian, а потом мы получали раскрывающийся список со заметками И могли раскрывающиеся списки посмотреть То есть по сути у нас заметок из Obsidian будет просто отдельный блок 
+    - «Превентивный поиск» — во время разговора AI в реальном времени ищет по твоим прошлым данным и показывает подсказки вроде «Похоже, ты изобретаешь велосипед», «Это противоречит тому, что ты говорил вчера» или «У тебя уже есть решение этой проблемы от 2023 года».
+        -  ну вообще по хорошему на заметке при нажатие кнопки связи будут прошлым мысли. и часть из них надо как то помечать, типа эти пункты изменились или закрыты. то есть при переходе на страую заметку там будет пометка что для меня тема уже е актуальна
+
+   
+
+    - Вложенные фреймы как в Figma с несколькими уровнями вложенности, внутри фрейма независимая прокрутка и можно перемещать заметки внутрь или из фрейма так же быстро как в обычном фрейме Figma
+        - Если отдалиться от фрейма можно нажать кнопку сверху и свернуть его в компактный вид с preview содержимого, этот toggle list с фреймом внутри можно свободно перемещать по холсту
+
 
 
 - 🧾 требования для canvas, ресерч 
@@ -121,16 +191,3 @@
     - Deep Research [claude](https://claude.ai/chat/dc9f59b6-4333-40b6-bb50-09418a6f700b) + выбираем react tldraw
 
 
-
-- 🧠 дальнейшние планы
-    - связки с другими заметками. в том числе из обсидиан. но вопрос как. для отображения заметок из обсидиан по всути другой фкуцуионал будет.
-    А, так мы можем в заметке, вот как сейчас в системе тегов, также добавить связь при помощи АИшки И допустим с помощью АИ можно сделать так, чтобы он писал проанализировать, куда можно добавить эту заметку, связь И он анализировал все заметки Obsidian, а потом мы получали раскрывающийся список со заметками И могли раскрывающиеся списки посмотреть То есть по сути у нас заметок из Obsidian будет просто отдельный блок 
-    - «Превентивный поиск» — во время разговора AI в реальном времени ищет по твоим прошлым данным и показывает подсказки вроде «Похоже, ты изобретаешь велосипед», «Это противоречит тому, что ты говорил вчера» или «У тебя уже есть решение этой проблемы от 2023 года».
-        -  ну вообще по хорошему на заметке при нажатие кнопки связи будут прошлым мысли. и часть из них надо как то помечать, типа эти пункты изменились или закрыты. то есть при переходе на страую заметку там будет пометка что для меня тема уже е актуальна
-
-    - Магнитное притяжение заметок при приближении друг к другу, кнопка "упорядочить хаос" для smart layout всех заметок
-    - Поиск по заметкам с подсветкой результатов и автоматическим переходом к нужной заметке на холсте
-
-
-    - Вложенные фреймы как в Figma с несколькими уровнями вложенности, внутри фрейма независимая прокрутка и можно перемещать заметки внутрь или из фрейма так же быстро как в обычном фрейме Figma
-        - Если отдалиться от фрейма можно нажать кнопку сверху и свернуть его в компактный вид с preview содержимого, этот toggle list с фреймом внутри можно свободно перемещать по холсту
