--- a/specs-wiki/будущие план по фукнционалу всего.md
+++ b/specs-wiki/будущие план по фукнционалу всего.md
@@ -11,7 +11,7 @@
     🟢 как вариант самый базовй - справа от заметки будет кнопка "найти похожие заметки для связи" - нейронка будет искать похожие заметки и выводить их в ряд. будет пояснение "почему эти заметки похожи" + фукцнионал добавления связей в редактор - "добавить ссылку на эту заметку в конец" или "вставьте ссылку на абзца..."
 
 
-
+# RESONATING_IDEAS.md - тут гланый userFlow в "финальнои приложение"
 
 
 
@@ -49,15 +49,14 @@
 
     но как еще я смогу перейти к старому монологу? я долго изучал систему zettelkasten и она имеет ряд недостатков. мне например notion удобнее банально за счет "ширины обзора" - так как я не могу каждый раз кликать по ссылке в заметке - зачем? если я могу через вложенные списке на одном экране отобразить сразу сотни заметок. у меня обычно toggle list с заголовкаом который внутри себя содрежит еще toggle list. такой подход имеет так же сущесвтенный недостаток, т.к. допустим нижняя тема в 4 дочерним toggle list имеет схожую мысль с темой которая вообще в другой области и не понятно как их объеденить.
 
-    NOTES_CATEGORIZATION_IDEAS.md - нейронке кинул все заметки obsidian + инфу выше 
+    # NOTES_CATEGORIZATION_IDEAS.md - нейронке кинул все заметки obsidian + инфу выше 
 
-    NETWORKING_NOTE_ANALYSIS - разбор конкретного примера 
+    # NETWORKING_NOTE_ANALYSIS - разбор конкретного примера 
 
     🟢 Вот тоже интересная мысль, которая нарезонирует про то, что ты написал выше, что ключевое для понимания — это игровая метафора, эффективная игра. Вот такие метафоры — это тоже очень важная часть, поскольку как раз-таки отвечая на вопрос, что это даёт мне, в чём смысл всей этой заметки. И вот как раз-таки смысл всей этой заметки — это социальная игра, эффективная. А всё, что было до этого, там, кстати, по большей степени — это поток мыслей. Нужно отделять… Вот один из хороших примеров, то, что мы отделяем итог, что мы получили социальные правила, эффективные игры и начальный процесс, как мы к этому шли. Если я захочу, я могу, допустим, по отдельной кнопке посмотреть, как я пришёл к этой мысли, но это уже дополнительная информация. 
 
 
 
-    ## RESONATING_IDEAS.md
 
 
 
